Remove trailing ' from links

--- a/src/content/download/v2.13.0.md
+++ b/src/content/download/v2.13.0.md
@@ -6,8 +6,8 @@ order: 1
 Legacy Windows API version.
 
 - [All platforms 32-bit/64-bit GPL source code](https://www.7kfans.com/downloads/7kaa-2.13.2.tar.bz2) _1a626a2bf92f4ad394558a903f519594_
-- [Game data (only for 2.13.x) zip](https://www.7kfans.com/downloads/7kaa-data-2.13.zip')
-- [Game data (only for 2.13.x) tar.bz](https://www.7kfans.com/downloads/7kaa-data-2.13.tar.bz2')
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip')
+- [Game data (only for 2.13.x) zip](https://www.7kfans.com/downloads/7kaa-data-2.13.zip)
+- [Game data (only for 2.13.x) tar.bz](https://www.7kfans.com/downloads/7kaa-data-2.13.tar.bz2)
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music.tar.bz2)
-- [Windows 32-bit patch](https://www.7kfans.com/downloads/7kaa-patch-2.13.2.zip') _83152b21973c1b3df8de525bda434be4_
+- [Windows 32-bit patch](https://www.7kfans.com/downloads/7kaa-patch-2.13.2.zip) _83152b21973c1b3df8de525bda434be4_
