--- a/src/content/download/v2.14.0.md
+++ b/src/content/download/v2.14.0.md
@@ -13,7 +13,7 @@ This said, the game might not be trouble free. Desync issues likely lurk still. 
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.7/7kaa-install-win32-2.14.7.exe) _6573ebb2a6689a83a52c86358a920316_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.7/7kaa-2.14.7.tar.xz) _f044d7bd57e636b8b9ac33b728581a43_
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip')
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music.tar.bz2)
 - [Windows patch zip 2.15.0-dev](https://www.7kfans.com/downloads/7kaa-patch-2.15.0-dev-157c89d.zip)
 
@@ -27,9 +27,9 @@ This 2.14.xx series is now considered a stable branch of the tree for all users 
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.6/7kaa-install-win32-2.14.6.exe) _d5161b6bcae9c5cde605bf742f92eca2_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.6/7kaa-2.14.6.tar.xz) _a05a2fa0369946e45a427477f4e0c800_
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip')
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music.tar.bz2)
-- [Windows exe-only](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.6/7kaa.exe') _68056ca8bb01484e915c8cae3161a951_
+- [Windows exe-only](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.6/7kaa.exe) _68056ca8bb01484e915c8cae3161a951_
 - [Windows patch zip 2.14.7-dev](https://www.7kfans.com/downloads/7kaa-patch-2.14.7-dev-9f2721f.zip)
 
 
@@ -55,6 +55,6 @@ Thanks to all who have contributed to this release.
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.5/7kaa-install-win32-2.14.5.exe) _38ee8b37558d9a111b9f1a1309a8ac2b_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.5/7kaa-2.14.5.tar.xz) _1a626a2bf92f4ad394558a903f519594_
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip')
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music.tar.bz2)
-- [Windows exe-only](https://www.7kfans.com/downloads/7kaa-2.14.5-hotfix.exe') _83152b21973c1b3df8de525bda434be4_
+- [Windows exe-only](https://www.7kfans.com/downloads/7kaa-2.14.5-hotfix.exe) _83152b21973c1b3df8de525bda434be4_
