--- a/src/content/download/v2.15.0.md
+++ b/src/content/download/v2.15.0.md
@@ -24,7 +24,7 @@ Allow copying trade routes using the trade report.
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.4/7kaa-install-win32-2.15.4.exe) _b5fa0bc358bcfda90df8aae8ad97d8a5_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.4/7kaa-2.15.4.tar.xz) _caa3c03c773de805c66546c2371a370c_
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip')
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music-2.15.tar.bz2)
 
 
@@ -58,7 +58,7 @@ Correct replay initialization for weather sync.
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.3/7kaa-install-win32-2.15.3.exe) _dfc408696a80a73903c3d8dad165d213_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.4p1/7kaa-2.15.4p1.tar.xz) _57a65e4352df60449429c698f34c8b76_
-- [Music (Not GPL) zip](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.3/7kaa-2.15.3.tar.xz')
+- [Music (Not GPL) zip](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.3/7kaa-2.15.3.tar.xz)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music-2.15.tar.bz2)
 
 
@@ -83,7 +83,7 @@ Enabled sync checking in replay mode.
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.2/7kaa-install-win32-2.15.2.exe) _e9d62d46ac55d97c5574ed70766d65ed_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.2/7kaa-2.15.2.tar.xz) _abd3648aec3b8337a16f22de43ce9b19_
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip')
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music-2.15.tar.bz2)
 - [Windows patch zip 2.15.3-dev](https://www.7kfans.com/downloads/7kaa-patch-2.15.3-dev-00c6ac9.zip) 
 
@@ -119,7 +119,7 @@ the latest download for the music.
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.1/7kaa-install-win32-2.15.1.exe) _3e15530028edf84418ddbc5b28d01731_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.1/7kaa-2.15.1.tar.xz) _977894288ec7bde8235ebd500d82c6f2_
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip')
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music-2.15.tar.bz2)
 
 
@@ -149,7 +149,7 @@ Thanks to all who made this release possible.
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.0/7kaa-install-win32-2.15.0.exe) _297ffc314d4beec2aabc4937127a058f_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.0/7kaa-2.15.0.tar.xz) _4478e7aaa3fd5e5104697f1cd7017c47_
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip')
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip)
 - [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music-2.15.tar.bz2)
 
 
