Take the changes made from @the3dfxdude - Update readme - Update news - Update downloads - Simplify templates - Add option to gensite.pl

--- a/src/content/news/2020-07-04.md
+++ b/src/content/news/2020-07-04.md
@@ -7,11 +7,15 @@ summary : 'Time for a new release! This fixes the issue with a freeze after play
 order: 0
 ---
 
+# Seven Kingdoms v2.15.4
+
+### Posted on 2020-07-04 by the3dfxdude
+
 Time for a new release! This fixes the issue with a freeze after playing long multiplayer games. If you had turned off CRC checking, please turn it back on. Other than that, multiplayer has been very smooth. This means we can start playing some bigger matches — I want to see them.
 
 The other thing fixed that put defenders at a major disadvantage was concerning the game not properly assigning the leader to the defending troop. Now soldiers can defend and get an attack bonus with their leader safe in the fort also keeping peace over the population. Maybe this will balance out the game better? We’ll see.
 
 Also, check out the trade report. The other thing we’d like to see is people paying attention to their markets. You can now find that caravan running between empty markets, or see the most productive markets, or set trade routes without moving around the map looking for something.
 
-See changes and comment in the forums
-[Download](/download/latest)
+[See changes and comment in the forums](https://www.7kfans.com/forums/viewtopic.php?f=18&amp;t=1156&amp;p=8684#p8684)<br>
+[Download](../download/v2.15.4p1.html)
