--- a/src/content/news/2022-01-20.md
+++ b/src/content/news/2022-01-20.md
@@ -1,19 +1,13 @@
 ---
-title : 'Seven Kingdoms Ancient Adversaries'
+title: 'Website change coming'
+slug: 'website-change-coming'
+author: 'the3dfxdude'
+date: '2022-01-20'
+summary : 'We are working on a new content management system for the website, which will replace Wordpress and the Wiki. If you have been following the Wordpress and Media Wiki RSS feed from this site, the new RSS feed url is: https://7kfans.com/rss.xml'
+order: 0
 ---
-Seven Kingdoms Ancient Adversaries is the real-time strategy game designed by Trevor Chan, now freely available and maintained by the community.
 
-The game is compatible with Windows, MacOS and Linux.
-
-###[Learn more about the game](about.html)
-</br>
-
--------
-
-</br>
-# Latest News
-
-## Website change coming
+# Website change coming
 
 ### Posted on January 20th, 2022 by the3dfxdude
 
