--- a/src/content/news/2019-09-03.md
+++ b/src/content/news/2019-09-03.md
@@ -7,8 +7,13 @@ summary : 'With the holiday here in the US, I had a much needed break from my da
 order: 1
 ---
 
+# Ten Year Anniversary
+
+### Posted on 2019-09-03 by the3dfxdude
+
 With the holiday here in the US, I had a much needed break from my daily job (the one that pays the bills), that I took the opportunity to get out for a change. I made it half way through the weekend, when I remember this past weekend was also the 10th year since this project website was created.
 
 
 It’s been a pleasure with working with all of you to make this community more vibrant and active. Let’s see what’s in store in the not to far away future.
-Comment in the forums
+
+[Comment in the forums](https://7kfans.com/forums/posting.php?mode=post&f=6)
