Update summary of the version download - this needs work, but it is planned

--- a/src/content/download/v2.14.6.md
+++ b/src/content/download/v2.14.6.md
@@ -1,8 +1,9 @@
 ---
-title: 'v2.14.6'
+title: 'Download version 2.14.6'
 order: 2
 ---
-## 2.14.6 _{2016-09-04}_
+## Version 2.14.6 
+#### Released _2016-09-04_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.6/7kaa-install-win32-2.14.6.exe) _d5161b6bcae9c5cde605bf742f92eca2_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.6/7kaa-2.14.6.tar.xz) _a05a2fa0369946e45a427477f4e0c800_
