--- a/src/content/download/v2.15.1.md
+++ b/src/content/download/v2.15.1.md
@@ -1,8 +1,9 @@
 ---
-title: 'v2.15.1'
+title: 'Download version 2.15.1'
 order: 3
 ---
-## 2.15.1 _{2018-12-28}_
+## Version 2.15.1 
+#### Released _2018-12-28_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.1/7kaa-install-win32-2.15.1.exe) _3e15530028edf84418ddbc5b28d01731_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.1/7kaa-2.15.1.tar.xz) _977894288ec7bde8235ebd500d82c6f2_
