--- a/src/content/download/v2.15.2.md
+++ b/src/content/download/v2.15.2.md
@@ -1,8 +1,9 @@
 ---
-title: 'v2.15.2'
+title: 'Download version 2.15.2'
 order: 3
 ---
-## 2.15.2 _{2019-06-22}_
+## Version 2.15.2 
+#### Released _2019-06-22_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.2/7kaa-install-win32-2.15.2.exe) _e9d62d46ac55d97c5574ed70766d65ed_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.2/7kaa-2.15.2.tar.xz) _abd3648aec3b8337a16f22de43ce9b19_
