--- a/src/content/download/v2.15.4.md
+++ b/src/content/download/v2.15.4.md
@@ -1,8 +1,9 @@
 ---
-title: 'v2.15.4'
+title: 'Download version 2.15.4'
 order: 3
 ---
-## 2.15.4 _{2020-07-04}_
+## Version 2.15.4 
+#### Released _2020-07-04_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.4/7kaa-install-win32-2.15.4.exe) _b5fa0bc358bcfda90df8aae8ad97d8a5_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.4/7kaa-2.15.4.tar.xz) _caa3c03c773de805c66546c2371a370c_
