--- a/src/content/download/v2.15.5.md
+++ b/src/content/download/v2.15.5.md
@@ -1,9 +1,10 @@
 ---
-title: '2.15.5'
+title: 'Download version 2.15.5'
 slug: 'v2-15-5'
 order: 4
 ---
-## 2.15.5 _{2022-04-29}_
+## Version 2.15.5 
+#### Released _2022-04-29_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.5/7kaa-install-win32-2.15.5.exe) _40f0bc3125999a9d33843fdd069eada8_
   - Note: An earlier version of the installer has md5sum of _d9987bc6af86432829b60aef7c473ea9_ which provided SDL version 2.0.22
