--- a/src/content/download/v2.13.2.md
+++ b/src/content/download/v2.13.2.md
@@ -1,8 +1,10 @@
 ---
-title: 'v2.13.2'
+title: 'Download version 2.13.2'
 order: 1
 ---
-## 2.13.2 _{2015-05-28}_
+## Version 2.13.2 
+#### Released _2015-05-28_
+
 Legacy Windows API version.
 
 - [All platforms 32-bit/64-bit GPL source code](https://www.7kfans.com/downloads/7kaa-2.13.2.tar.bz2) _1a626a2bf92f4ad394558a903f519594_
