--- a/src/content/download/v2.14.5.md
+++ b/src/content/download/v2.14.5.md
@@ -1,8 +1,9 @@
 ---
-title: 'v2.14.5'
+title: 'Download version 2.14.5'
 order: 2
 ---
-## 2.14.5 _{2015-05-28}_
+## Version 2.14.5 
+#### Released _2015-05-28_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.5/7kaa-install-win32-2.14.5.exe) _38ee8b37558d9a111b9f1a1309a8ac2b_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.5/7kaa-2.14.5.tar.xz) _1a626a2bf92f4ad394558a903f519594_
