--- a/src/content/download/v2.14.7.md
+++ b/src/content/download/v2.14.7.md
@@ -1,8 +1,9 @@
 ---
-title: 'v2.14.7'
+title: 'Download version 2.14.7'
 order: 2
 ---
-## 2.14.7 _{2017-06-04}_
+## Version 2.14.7 
+#### Released _2017-06-04_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.7/7kaa-install-win32-2.14.7.exe) _6573ebb2a6689a83a52c86358a920316_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.14.7/7kaa-2.14.7.tar.xz) _f044d7bd57e636b8b9ac33b728581a43_
