--- a/src/content/download/v2.15.0.md
+++ b/src/content/download/v2.15.0.md
@@ -1,8 +1,9 @@
 ---
-title: 'v2.15.0'
+title: 'Download version 2.15.0'
 order: 3
 ---
-## 2.15.0 _{2018-09-17}_
+## Version 2.15.0 
+#### Released _2018-09-17_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.0/7kaa-install-win32-2.15.0.exe) _297ffc314d4beec2aabc4937127a058f_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.0/7kaa-2.15.0.tar.xz) _4478e7aaa3fd5e5104697f1cd7017c47_
