--- a/src/content/download/v2.15.3.md
+++ b/src/content/download/v2.15.3.md
@@ -1,8 +1,9 @@
 ---
-title: 'v2.15.3'
+title: 'Download version 2.15.3'
 order: 3
 ---
-## 2.15.3 _{2019-12-22}_
+## Version 2.15.3 
+#### Released _2019-12-22_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.3/7kaa-install-win32-2.15.3.exe) _dfc408696a80a73903c3d8dad165d213_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.4p1/7kaa-2.15.4p1.tar.xz) _57a65e4352df60449429c698f34c8b76_
