--- a/src/content/download/v2.15.4p1.md
+++ b/src/content/download/v2.15.4p1.md
@@ -1,9 +1,10 @@
 ---
-title: '2.15.4p1'
+title: 'Download version 2.15.4p1'
 slug: 'v2-15-4p1'
 order: 4
 ---
-## 2.15.4p1 _{2020-07-11}_
+## Version 2.15.4p1 
+#### Released _2020-07-11_
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.4p1/7kaa-install-win32-2.15.4p1.exe) _b5fa0bc358bcfda90df8aae8ad97d8a5_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.4p1/7kaa-2.15.4p1.tar.xz) _caa3c03c773de805c66546c2371a370c_
