Update old link in news article.

--- a/src/content/news/2009-10-07.md
+++ b/src/content/news/2009-10-07.md
@@ -7,6 +7,6 @@ summary : 'You can access the Seven Kingdoms Wiki'
 order: 0
 ---
 
-You can access the Seven Kingdoms Wiki [here](http://7kfans.com/wiki).
+You can access the Seven Kingdoms Wiki [here](http://7kfans.com/community.html). [Link updated 2022-12-17]
 
 Feel free to contribute to the wiki and help correct and improve it.  This is very much a community project and the more involved the better.
