--- a/src/content/news/2015-01-02.md
+++ b/src/content/news/2015-01-02.md
@@ -1,8 +1,8 @@
 ---
-title: '7KAA 2.14.4'
-slug: '7kaa-2.14.4'
+title: 'Seven Kingdoms 2 HD'
+slug: 'seven-kingdoms-2-hd'
 author: 'the3dfxdude'
-date: '2012-12-24'
+date: '2015-01-02'
 summary : "Recently I've heard the news that Enlight is preparing for a steam release of an updated Seven Kingdoms 2 HD."
 order: 0
 ---
