Fix invalid "</br>" and inconsistent "<br/>" tags

--- a/src/content/news/2023-09-02.md
+++ b/src/content/news/2023-09-02.md
@@ -9,7 +9,7 @@ order: 0
 
 Hello! People have been asking, and there is a need to do some testing. In the previous release, we tried using the then latest SDL 2.0.22 version, and we saw some issues on Windows. We quickly backed to the previous version of SDL we used, and the problems went away. I think we do want to try to make sure we can support the latest SDL release. So this is the purpose of this development build.
 
-Of course, there are alot of enhancements to the AI and other bugfixes. You can get a chance to test and preview what's coming here in our development build location:</br>
+Of course, there are alot of enhancements to the AI and other bugfixes. You can get a chance to test and preview what's coming here in our development build location:<br>
 [Download here](https://sourceforge.net/projects/skfans/files/7KAA%20DEV/)
 
 In the past we provided development builds. As before, these builds are temporary, and cannot be played in multiplayer except with this exact version with others. So they will come and be removed as needed. But I do hope to share development builds whenever I can.
