--- a/src/content/download/v2.15.0.md
+++ b/src/content/download/v2.15.0.md
@@ -7,7 +7,7 @@ order: 3
 
 - [Windows 32-bit installer](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.0/7kaa-install-win32-2.15.0.exe) _297ffc314d4beec2aabc4937127a058f_
 - [All platforms 32-bit/64-bit GPL source code](https://github.com/the3dfxdude/7kaa/releases/download/v2.15.0/7kaa-2.15.0.tar.xz) _4478e7aaa3fd5e5104697f1cd7017c47_
-- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music-2.15.zip)
-- [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music-2.15.tar.bz2)
+- [Music (Not GPL) zip](https://www.7kfans.com/downloads/7kaa-music.zip)
+- [Music (Not GPL) tar.bz](https://www.7kfans.com/downloads/7kaa-music.tar.bz2)
 
 
